# bootcamp_lv_python6-10

./: .pre-commit-config.yaml  README.md  pyproject.toml  utils_log.py  vendas.csv
aula7/: etl.py  exemplo00.py  main.py
aula8/: dados.csv  dados.parquet  etl.py  pipeline.py
aula9/: ex00.py
data/: dia1.json  dia2.json
