[tool.poetry]
name = "bootcamp-lv-python6-10"
version = "0.1.0"
description = ""
authors = ["Diego Morais <dolivmorais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
pre-commit = "^4.1.0"
pandera = "^0.22.1"
pandas = "^2.2.3"
fastparquet = "^2024.11.0"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
